Update posts Add new posts

--- a/_posts/2022-10-03-api.md
+++ b/_posts/2022-10-03-api.md
@@ -1,8 +1,8 @@
 ---
 title: API
 date: 2022-10-03 16:36:00 +0800
-categories: [Blogging, Developer]
-tags: [programming, networking, api]
+categories: [Blogging, Technology, Software Development]
+tags: [programming, api]
 ---
 
 ## Definition
