update cookies's tag

--- a/_posts/2022-10-08-cookies.md
+++ b/_posts/2022-10-08-cookies.md
@@ -2,7 +2,7 @@
 title: Cookies
 date: 2022-10-08 18:00:00 +0800
 categories: [Blogging, Technology, Software Development]
-tags: [browser, http]
+tags: [browser, http, cookies]
 ---
 
 - A cookies is a small piece of data that being stored inside the web browser's local folder. This data commonly written in a form of text files. The data is being use to identify the user devices when they're accessing to the internet.
