--- a/_posts/2022-10-24-solid.md
+++ b/_posts/2022-10-24-solid.md
@@ -18,7 +18,7 @@ tags: [design principle, solid]
 
 ## SOLID Acronyms
 
-1. **S** - [Single Responsibility Principle (SRP)]()
+1. **S** - [Single Responsibility Principle (SRP)](/posts/solid-srp/)
 2. **O** - [Open-Closed Principle (OCP)]()
 3. **L** - [Liskov's Substitution Principle (LSP)]()
 4. **I** - [Interface Segregation Principle (ISP)]()
