Add link for nav for SOLID's topic
Delete white trail space

--- a/_posts/2022-10-24-solid-isp.md
+++ b/_posts/2022-10-24-solid-isp.md
@@ -7,7 +7,7 @@ tags: [design principle, solid, isp]
 
 > **Interface Segregation Principle (ISP)** suggests that the class shouldn't be force to implement all of the methods that have been defined by the large interface, instead of grouping a big number of method into one interface, numerous interface is preferred.
 >
-> Like **[Single Responsibility Principle (SRP)]()** where it separated the classes and its properties into single responsibility, same concept can be apply for **interface Segregation Principle (ISP)** instead of using classes, we use interface instead.
+> Like **[Single Responsibility Principle (SRP)](/posts/solid-srp/)** where it separated the classes and its properties into single responsibility, same concept can be apply for **interface Segregation Principle (ISP)** instead of using classes, we use interface instead.
 
 ## Example: Without Interface Segregation Principle
 
