--- a/_posts/2022-10-24-solid-ocp.md
+++ b/_posts/2022-10-24-solid-ocp.md
@@ -11,7 +11,7 @@ tags: [design principle, solid, ocp]
 
 - The reason for the implementation of OCP is because the already developed class/module has gone through the unit testing phase. So **if we added new functionality into the class, the class/module has to go through the unit testing phase again along with the new functionality**.
 - By implementing OCP, it will not affect the existing class/modules or its functionalities. Thus, preventing unwanted bugs.
-- If not implementing OCP it will also breaks the [Single Responsibility Principle (SRP)]() as the class is going to hold multiple responsibilities.
+- If not implementing OCP it will also breaks the [Single Responsibility Principle (SRP)](/posts/solid-srp/) as the class is going to hold multiple responsibilities.
 
 ## How to Implement Open-Closed Principle
 
