--- a/_posts/2022-10-24-solid.md
+++ b/_posts/2022-10-24-solid.md
@@ -10,19 +10,19 @@ tags: [design principle, solid]
 ## Advantages of using SOLID
 
 - **Maintainable**: Able to implement new changes with ease, less effort and without any unwanted hiccup to the application.
-- **Testable:** By implementing [Single Responsibility Principle (SRP)]() within the entire application, it can make testing application's functionalities feasible.
+- **Testable:** By implementing [Single Responsibility Principle (SRP)](/posts/solid-srp/) within the entire application, it can make testing application's functionalities feasible.
 - **Flexible & Extendable**: Ensure the application is flexible to work with any different kind of environment, make the process of adding a new features easier, less effort.
-- **Parallel Development**: Enable team members to work in the same application without worrying their work can affecting others. Enable different team member to work on different module or functionalities. 
+- **Parallel Development**: Enable team members to work in the same application without worrying their work can affecting others. Enable different team member to work on different module or functionalities.
 - **Reduce code complexity**: Ensure the codebase is understandable to other people.
 - **Reusable**: Ensure that functionalities, library, class and etc. can be use across different segments of the application or another application.
 
 ## SOLID Acronyms
 
 1. **S** - [Single Responsibility Principle (SRP)](/posts/solid-srp/)
-2. **O** - [Open-Closed Principle (OCP)]()
-3. **L** - [Liskov's Substitution Principle (LSP)]()
-4. **I** - [Interface Segregation Principle (ISP)]()
-5. **D** - [Dependency Inversion Principle (DIP)]()
+2. **O** - [Open-Closed Principle (OCP)](/posts/solid-ocp/)
+3. **L** - [Liskov's Substitution Principle (LSP)](/posts/solid-lsp/)
+4. **I** - [Interface Segregation Principle (ISP)](/posts/solid-isp/)
+5. **D** - [Dependency Inversion Principle (DIP)](/posts/solid-dip/)
 
 ---
 
