Fix typos and sentences

--- a/_posts/2022-10-24-solid-dip.md
+++ b/_posts/2022-10-24-solid-dip.md
@@ -185,14 +185,14 @@ namespace SOLID_DIP
 }
 ```
 
-- Below shows `DataHandlerSection.cs` class that contain one static method `GetCustomerDataObj()` which return the instance of the `IEmployeeDataAccess` interface though defining a new `CustomerDataFetch` class.
-- The implementation for this file is different from the previous section, this is because the return type for `GetCustomerDataObj()` is changed from `CustomerDataFetch` to `IEmployeeDataAccess`.
+- Below shows `DataHandlerSection.cs` class that contain one static method `GetCustomerDataObj()` which return the instance of the `ICustomerDataAccess` interface though defining a new `CustomerDataFetch` class.
+- The implementation for this file is different from the previous section, this is because the return type for `GetCustomerDataObj()` is changed from `CustomerDataFetch` to `ICustomerDataAccess`.
 
 ```c#
 // DataHandlerSection.cs
 namespace SOLID_DIP
 {
- public static IEmployeeDataAccess GetCustomerDataObj()
+ public static ICustomerDataAccess GetCustomerDataObj()
  {
   return new CustomerDataFetch()
  }
