--- a/_posts/2022-10-24-solid-lsp.md
+++ b/_posts/2022-10-24-solid-lsp.md
@@ -16,8 +16,8 @@ tags: [design principle, solid, lsp]
 
 ## Example: Wrong Liskov's Substitution Principle Usage
 
-- Below contains a snippet, that have an interface called `IPlayerInfo` along with two class that uses the interface, which is a`NormalPlayer` and `ProPlayer` but only one of the classes that uses `bool PlayerStatus`.
-- Inside `ProPlayer`'s classes, `bool PlayerStatus` is not being used by the class's scope, this actually go against the LSP, where the derived class (`NormalPlayer` & `ProPlayer`) are required to use all the properties and methods that has been defined inside the parent class/interface (`IPlayerInfo`). This behavior will triggered a butterfly effect later down the line.
+- Below contains a snippet, that have an interface called `IPlayerInfo` along with two class that uses the interface, which is a `NormalPlayer` and `ProPlayer` but only `NormalPlayer` that uses variable `bool PlayerStatus` to check the value availability.
+- Inside `ProPlayer`'s classes, `bool PlayerStatus` is not being used by the class's scope, this actually go against the LSP, where the derived class (`NormalPlayer` & `ProPlayer`) are **required to use all the properties and methods that has been defined inside the parent class/interface** (`IPlayerInfo`). This behavior will triggered a butterfly effect later down the line.
 - Derived class should obey their parent class/interface, implement all the properties and methods, don't add new implementation within the derived class which doesn't actually exist inside the parent class/interface.
 
 ```c#
@@ -64,7 +64,7 @@ public class ProPlayer: IPlayerInfo
 ## Example: Without Liskov's Substitution Principle
 
 - Below shows a snippet of a program that doesn't implement LSP, as we can see below, that `Bmw` is the base class while `Ferarri` is the derived class.
-- What this program is trying to achieve, is to make `Bmw` (base class) holds a `Ferrari`'s `MaxSpeed` value  instead of using the default value. This is against the LSV this is because there's a behavioral changes which against the principle's rules happening.
+- What this program is trying to achieve, is to make `Bmw` (base class) holds a `Ferrari`'s `MaxSpeed` value  instead of using the default value. This is against the LSV this is because there's a behavioral changes which against the principle's rules.
 - Supposedly the `MaxSpeed` value for `Bmw` should not change and remain the same. Base's class rules is absolute and the derived class must obey it. If the base's class already has a value then the derived class can't change it.
 
 ```c#
