--- a/_posts/2022-10-24-solid-ocp.md
+++ b/_posts/2022-10-24-solid-ocp.md
@@ -5,12 +5,12 @@ categories: [Blogging, Technology, Software Development, Design Principle, SOLID
 tags: [design principle, solid, ocp]
 ---
 
->**Open-Closed Principle (OCP)** suggest that **entities like methods, modules, classes, etc. should be open for extension but closed for modification.** **Open for extension** means application's class should be easy to implement new features or methods. **Closed for modification** means application's class should not be modify until there's a bug.
+>**Open-Closed Principle (OCP)** suggest that **entities like methods, modules, classes, etc. should be open for extension but closed for modification.** **Open for extension** means application's class should be easy for implementing new features or methods. **Closed for modification** means application's class should not be modify unless there's a bugs to fix.
 
 ## Reason for Implementing Open-Closed Principle
 
 - The reason for the implementation of OCP is because the already developed class/module has gone through the unit testing phase. So **if we added new functionality into the class, the class/module has to go through the unit testing phase again along with the new functionality**.
-- By implementing OCP, it will not affect the existing class/modules or its functionalities. Thus, preventing unwanted bugs.
+- By implementing OCP, it will not affect the existing class/modules or its functionalities, because OCP doesn't allow changes. Thus, preventing unwanted bugs.
 - If not implementing OCP it will also breaks the [Single Responsibility Principle (SRP)](/posts/solid-srp/) as the class is going to hold multiple responsibilities.
 
 ## How to Implement Open-Closed Principle
@@ -41,7 +41,7 @@ public class Role
 }
 ```
 
-- Above shows already developed `Role`'s class that has `if-else if` statement to filter out the `userInput`. In case we want to add another option, we have to add another `else if` block statement which is against the OCP.
+- Above shows already developed `Role`'s class that has `if-else if` statement to filter out the `userInput`. In case we want to add another option, we have to add another `else if` block statement which is against the OCP, this is because the `Role` class will need to be modify each times there's new changes.
 - In addition, we have to run unit testing again to ensure the old and the new functionalities are working properly, which is time consuming and redundant.
 
 ## Example: With Open-Closed Principle
@@ -83,9 +83,9 @@ namespace SOLID_OCP
 }
 ```
 
-- Above snippet shows an update version of the previous version with the implementation of **Open-Closed Principle (OCP**) which consist of three classes `StaffRole`, `CustomerRole`, `SupplierRole`.
-- All these three classes `StaffRole`, `CustomerRole`, `SupplierRole` are inherited from the base class `Role` which enable them to override the `CheckRole()` if they want too.
-- Later in the future, if we want to add another role, then we can create a new derived class from the `Role` class.
+- Above snippet shows an updated version of the previous snippet with the implementation of **Open-Closed Principle (OCP**). The program consist of  one base class `Role` and three derived classes `StaffRole`, `CustomerRole`, `SupplierRole`.
+- The `StaffRole`, `CustomerRole`, `SupplierRole` classes are inherited from the base class `Role` which enable them to override the `CheckRole()` if they want too.
+- Later in the future, if there's a new role require to be added, then we only need to create a new derived class from the `Role` class instead of modifying the existing classes.
 - **By not changing the code inside the `Role` class or base class and creating derived class, we've already implementing Open-Closed Principle (OCP).**
 
 > "Software entities (classes, modules, functions, etc...) should be open for extension, but closed for modifications.". - Open-Closed Principle > by Robert C. Martin
