--- a/_posts/2022-10-24-solid-srp.md
+++ b/_posts/2022-10-24-solid-srp.md
@@ -5,7 +5,7 @@ categories: [Blogging, Technology, Software Development, Design Principle, SOLID
 tags: [design principle, solid, srp]
 ---
 
-> **Single Responsible Principle (SRP)** suggest to include everything in a class or module should only be related to a single responsibility or task. Can have multiple properties and methods as long they are related to a single functionality or responsibility.
+> **Single Responsible Principle (SRP)** suggest to include everything in a class or module that are related to a single responsibility or task. Can have multiple properties and methods as long as they are related to a single functionality or responsibility.
 
 ## Example: Without Single Responsibility Principle
 
